# ComputationalPhysics

./: .gitignore  ComputationalPhysics.sln  README.md
Harte_Kugeln/: CMakeLists.txt  Harte_Kugeln.vcxproj  Harte_Kugeln.vcxproj.filters
Harte_Kugeln/lib/: CollisionPair.h  CollisionPair.tpp  Kugel.h  Kugel.tpp  MatVec.h  MatVec.tpp  MetaKugel.h
Harte_Kugeln/results/: pair_distribution.py  plot_results.py
Harte_Kugeln/src/: Box.cpp  Box.h  CMakeLists.txt  Kugel.cpp  Kugel.h  Kugel.tpp  MatVec.h  Sphere.cpp  Sphere.h  Vec3D.h  Vec3D.tpp  beispiel_MatVec.cpp  beispiel_c14-c11.cpp  beispiel_c14.cpp  beispiel_cpp11-fix_overloading.cpp  beispiel_cpp11.cpp  bsp_Autocorrelation.cpp  bsp_Box.cpp  bsp_collision.cpp  bsp_collision_update.cpp  bsp_simulation.cpp  bsp_simulation_2.cpp  test_Box.cpp  test_Free_Histo.cpp  test_Vec3D.cpp
Harte_Kugeln/src_sonstiges/: Auswert.h  AuswertVec.h  Autocorrelation.h  Autocorrelation.hpp  Autocorrelation.tpp  Autocorrelation_Box.hpp  Average.hpp  AverageVelocitySquared.h  Box.h  Box.tpp  CMakeLists.txt  CollisionInfo.h  CollisionPair.h  CollisionPair.tpp  Config.h.in  Free_Histo.cpp  Free_Histo.h  Free_Histo_Pair.hpp  Kugel.h  Kugel.tpp  MatVec.h  MatVec.tpp  MetaKugel.h  MetaKugel.tpp  MomentumFlux.h  PairDistribution.h  PairDistribution.tpp  Rand.cpp  Rand.h  Vector_Queue.hpp  Vector_Queue.tpp  auswertung_bsp_average_energy.h  auswertung_bsp_average_vel.h  auswertung_collision_time.hpp  my_units.hpp  template_rational.hpp  units_typedef.h
Harte_Kugeln/unit_tests/: CMakeLists.txt  Test.cpp  Test_Box.cpp  Test_CollisionPair.cpp  Test_MatVec.cpp  test_Box.cpp  test_Box.h  test_CollisionPair.cpp  test_CollisionPair.h  test_Kugel.cpp  test_Kugel.h  test_MatVec.cpp  test_MatVec.h  test_Vector_Queue.cpp  test_Vector_Queue.h
Protokolle/: biblio.bib
Protokolle/Harte_Kugeln/: .gitignore  Harte_Kugeln.tex
Protokolle/Thermostaten/: Thermostats.tex  biblio.bib  main.tex
Thermostaten/: ClassDiagram.cd  Thermostaten.sln  Thermostaten.vcxproj  Thermostaten.vcxproj.filters
Thermostaten/Thermostaten/: Functions.h  Monomer.cpp  Monomer.h  Monomere.h  Nose_Hoover.cpp  Nose_Hoover.h  Polymer.cpp  Polymer.h  Thermostate.h  Thermostaten.vcxproj  Thermostaten.vcxproj.filters  a.out  readme.txt  test.cpp
Thermostaten/results/: running_simulations.txt
Thermostaten/src/: Andersen.cpp  Andersen.h  Berendsen.cpp  Berendsen.h  Bussi.cpp  Bussi.h  Functions.cpp  Functions.h  Gaussian.cpp  Gaussian.h  Histo.cpp  Histo.h  Lowe_Andersen.cpp  Lowe_Andersen.h  Makefile  Monomer.cpp  Monomer.h  Nose_Hoover.cpp  Nose_Hoover.h  Nose_Hoover_Chain.cpp  Nose_Hoover_Chain.h  Polymer.cpp  Polymer.h  Rand.cpp  Rand.h  Stat.cpp  Stat.h  (+33 more)
(+61 files in other folders)
